--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<script src="js/libs/jquery-1.10.1.js"></script>
 	<script src="js/libs/include.js"></script>
 <script type="text/javascript" charset="utf-8">
-document.addEventListener("deviceready", function() {
-//$(document).ready(function() {
+//document.addEventListener("deviceready", function() {
+$(document).ready(function() {
 var data_theme = "a";
 var data_content_theme="d";
 var data_filter_theme="c";
@@ -45,7 +45,7 @@ include("js/index.js");
 //include("js/product_info.js");
 //include("js/product_search.js");
 
-},false);
+});
 </script>
 </head>
 <body>
