--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta content="wine, winery" name="keywords" />
 	<meta content="Personal Lite Winery" name="description" />
-	<script src="js/libs/jquery.mobile-1.3.1.js"></script>
-	<script src="js/libs/jquery-1.10.1.js"></script>
-	<script src="js/libs/include.js"></script>
+
+	<script type="text/javascript" charset="utf-8" src="lib/cordova.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/libs/jquery.mobile-1.3.1.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/libs/jquery-1.10.1.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/libs/include.js"></script>
 <script type="text/javascript" charset="utf-8">
-//document.addEventListener("deviceready", function() {
+document.addEventListener("deviceready", function() {
 $(document).ready(function() {
 var data_theme = "a";
 var data_content_theme="d";
@@ -45,7 +47,7 @@ include("js/index.js");
 //include("js/product_info.js");
 //include("js/product_search.js");
 
-});
+},false);
 </script>
 </head>
 <body>
