--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<script type="text/javascript" charset="utf-8" src="js/libs/include.js"></script>
 <script type="text/javascript" charset="utf-8">
 document.addEventListener("deviceready", function() {
-$(document).ready(function() {
 var data_theme = "a";
 var data_content_theme="d";
 var data_filter_theme="c";
@@ -52,7 +51,7 @@ include("js/index.js");
 </head>
 <body>
 <div data-role="page" id="index" >
-hola
+hola melon
 </div>
 </body>
 </html>
